# UESTC-pblf-LibraryManagement

./: CMakeLists.txt  LibraryController接口文档.md  README.md
Controller/code/: main.c
Mapper/code/: AdminMapper.c  AdminMapper.h  BookBorrowMapper.c  BookBorrowMapper.h  SQLPointer.c  SQLPointer.h  UserLogMapper.c  UserLogMapper.h
Service/code/: adminService.c  adminService.h  bookBorrowService.c  bookBorrowService.h  userLog.c  userLog.h
